--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Oef Sound
+author=MakingStan
+support=https://github.com/MakingStan/Oef/issues
+description=Makes an oef sound when you die or take damage.
+tags=oef, minecraft, die, death, damage, funny, joke
+plugins=com.code.OefPlugin
