added: a volume option.
And i also added sounds that should be fine to use.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Oef Sound
+displayName=Oof Sound
 author=MakingStan
 support=https://github.com/MakingStan/Oef/issues
 description=Makes an oef sound when you die or take damage.
-tags=oef, minecraft, die, death, damage, funny, joke
+tags=oef, minecraft, die, death, damage, funny, joke, oof
 plugins=com.code.OefPlugin
