--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Oof Sound
 author=MakingStan
 support=https://github.com/MakingStan/Oef/issues
-description=Makes an oef sound when you die or take damage.
+description=Makes an oof sound when you die or take damage.
 tags=oef, minecraft, die, death, damage, funny, joke, oof
 plugins=com.code.OefPlugin
